# xmassCPP

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp  main_console.cpp  main_win32.cpp
